<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".SingInActivity"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sing_in_text_input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_marginBottom="10sp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sing_in_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sing_up_mail"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sing_in_text_input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true"
                app:helperText="Şifre en az 6 karakter olmalıdır"
                android:layout_marginBottom="10sp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sing_in_passwords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sing_up_password"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/sing_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sing_in_button" />

            <CheckBox
                android:id="@+id/sing_in_checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Beni Hatırla" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>